Fixed padding and header and footer bar spacing.

--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,6 @@ body {
   flex-direction: column;
   padding: 0;
   margin: 0 auto;
-  max-width: 1080px;
   float: none;
 }
 
@@ -53,20 +52,20 @@ a {
 }
 
 .summary {
-  padding: 10px;
-  margin-left: 30px;
-  margin-right: 30px;
+  padding: 25px;
+  margin: 0 auto;
   text-align: left;
   background-color: #a803b758;
+  max-width: 1080px;
 }
 
 .skills {
-  padding: 30px;
-  margin-right: 30px;
-  margin-left: 30px;
+  padding: 25px;
+  margin: 0 auto;
   column-count: 2;
   text-align: left;
   background-color: #a803b758;
+  max-width: 1080px;
 }
 
 .skills ul {
@@ -118,32 +117,33 @@ footer {
 
 .contactLinks {
   text-align: center;
-  padding-top: 10px;
-  padding-bottom: 10px;
+  margin: 0 auto;
+  padding: 25px;
+  max-width: 1080px;
 }
 
 .experience {
-  margin-left: 30px;
-  margin-right: 30px;
+  margin: 0 auto;
   text-align: left;
   background-color: #a803b758;
-  padding: 10px;
+  padding: 25px;
+  max-width: 1080px;
 }
 
 .education {
-  margin-left: 30px;
-  margin-right: 30px;
+  margin: 0 auto;
   text-align: left;
   background-color: #a803b758;
-  padding: 10px;
+  padding: 25px;
+  max-width: 1080px;
 }
 
 .hobbies {
-  margin-left: 30px;
-  margin-right: 30px;
+  margin: 0 auto;
   text-align: left;
-  padding: 10px;
+  padding: 25px;
   background-color: #a803b758;
+  max-width: 1080px;
 }
 
 .navigationBar {
